--- a/ProjetoBackend/ProjetoBackend.csproj
+++ b/ProjetoBackend/ProjetoBackend.csproj
@@ -20,4 +20,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Img\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Img\Frame 1.png" />
+  </ItemGroup>
+
 </Project>
