--- a/ProjetoBackend/appsettings.json
+++ b/ProjetoBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "workstation id=ProtMind.mssql.somee.com;packet size=4096;user id=Matheus_SQLLogin_1;pwd=evfzfo1xhr;data source=ProtMind.mssql.somee.com;persist security info=False;initial catalog=ProtMind;TrustServerCertificate=True"
+    "DefaultConnection": "data source=AI11-1264705\\SQLEXPRESS;user id=sa;pwd=Senai790;initial catalog=MathDb;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
